--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -9,7 +9,7 @@
     <%= time_ago_in_words comment.created_at %> .
     <% if current_user? comment.user %>
       <%= link_to t("destroy.button"), comment, method: :delete,
-        data: {confirm: t("destroy.confirm")} %>
+        data: {confirm: t("destroy.confirm")}, remote: true %>
     <% end %>
   </span>
 </li>
