fix bug when run heroku

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -47,7 +47,7 @@
               </li>
             </ul>
           </li>
-          <li class="td-cart-icon">
+          <li class="td-cart-icon cart">
             <%= render "layouts/order_text" %>
           </li>
         <% else %>
